ayy lmao :alien:

--- a/GoldFever/GoldFever.Core/GoldFever.Core.csproj
+++ b/GoldFever/GoldFever.Core/GoldFever.Core.csproj
@@ -50,11 +50,19 @@
     <Compile Include="GameException.cs" />
     <Compile Include="GameOptions.cs" />
     <Compile Include="Generic\Direction.cs" />
+    <Compile Include="Graphics\Terminal\Color\Background.cs" />
+    <Compile Include="Graphics\Terminal\CharInfo.cs" />
+    <Compile Include="Graphics\Terminal\CharUnion.cs" />
+    <Compile Include="Graphics\Terminal\Coord.cs" />
+    <Compile Include="Graphics\Terminal\DoubleBuffer.cs" />
     <Compile Include="Graphics\IRenderer.cs" />
+    <Compile Include="Graphics\Terminal\Color\Foreground.cs" />
+    <Compile Include="Graphics\Terminal\SmallRect.cs" />
     <Compile Include="Level\BaseLevel.cs" />
-    <Compile Include="Level\DefaultLevel.cs" />
+    <Compile Include="Cart\BaseCart.cs" />
     <Compile Include="Level\LevelLoadException.cs" />
     <Compile Include="Level\LevelManager.cs" />
+    <Compile Include="Level\LevelMetrics.cs" />
     <Compile Include="Model\LevelModel.cs" />
     <Compile Include="Model\TrackModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -65,6 +73,7 @@
     <Compile Include="Track\HoldTrack.cs" />
     <Compile Include="Track\StartTrack.cs" />
     <Compile Include="Track\SwitchInTrack.cs" />
+    <Compile Include="Track\SwitchMode.cs" />
     <Compile Include="Track\SwitchOutTrack.cs" />
     <Compile Include="Track\SwitchTrack.cs" />
     <Compile Include="Track\TrackFactory.cs" />
