--- a/GoldFever/GoldFever.UI/GoldFever.UI.csproj
+++ b/GoldFever/GoldFever.UI/GoldFever.UI.csproj
@@ -40,7 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SelectionMode.cs" />
     <Compile Include="Views\Generic\AlertView.cs" />
     <Compile Include="Views\Generic\AlertViewButtons.cs" />
     <Compile Include="Views\Generic\AlertViewEventArgs.cs" />
@@ -56,9 +58,7 @@
     <Compile Include="Views\ViewBehaviour.cs" />
     <Compile Include="Views\ViewManager.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Graphics\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
