added variable spawning

--- a/GoldFever/GoldFever.Core/GoldFever.Core.csproj
+++ b/GoldFever/GoldFever.Core/GoldFever.Core.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Action.cs" />
     <Compile Include="ActionEventArgs.cs" />
+    <Compile Include="Cart\Spawner.cs" />
     <Compile Include="Content\ContentLoadException.cs" />
     <Compile Include="Content\ContentManager.cs" />
     <Compile Include="Game.cs" />
