--- a/GoldFever/GoldFever/GoldFever.csproj
+++ b/GoldFever/GoldFever/GoldFever.csproj
@@ -64,7 +64,7 @@
     <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -84,7 +84,6 @@
   <ItemGroup>
     <None Include="App.config" />
     <EmbeddedResource Include="Content\Level.json" />
-    <None Include="GoldFever_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GoldFever.Core\GoldFever.Core.csproj">
