added slow rendering method for demo purposes

--- a/GoldFever/GoldFever.Core/GoldFever.Core.csproj
+++ b/GoldFever/GoldFever.Core/GoldFever.Core.csproj
@@ -61,8 +61,9 @@
     <Compile Include="Graphics\Terminal\Coord.cs" />
     <Compile Include="Graphics\Terminal\DoubleBuffer.cs" />
     <Compile Include="Graphics\IRenderer.cs" />
+    <Compile Include="Graphics\Terminal\SlowRenderer.cs" />
     <Compile Include="Graphics\Terminal\SmallRect.cs" />
-    <Compile Include="Graphics\Terminal\TerminalRenderer.cs" />
+    <Compile Include="Graphics\Terminal\FastRenderer.cs" />
     <Compile Include="Level\BaseLevel.cs" />
     <Compile Include="Cart\BaseCart.cs" />
     <Compile Include="Level\LevelLoadException.cs" />
