--- a/GoldFever/GoldFeverTests/GoldFeverTests.csproj
+++ b/GoldFever/GoldFeverTests/GoldFeverTests.csproj
@@ -52,7 +52,7 @@
   <ItemGroup>
     <Compile Include="GameTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utilities\GameTestUtilities.cs" />
+    <Compile Include="Utilities\LevelGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GoldFever.Core\GoldFever.Core.csproj">
