--- a/GoldFever/GoldFeverTests/GoldFeverTests.csproj
+++ b/GoldFever/GoldFeverTests/GoldFeverTests.csproj
@@ -60,7 +60,9 @@
       <Name>GoldFever.Core</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Content\Level.json" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
